// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-VigVT bqWYVJ"
>
  <div
    className="sc-jTzLTM gnUsfy"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-VigVT bqWYVJ"
>
  <div
    className="sc-jTzLTM gnUsfy"
  >
    title
  </div>
  content
</header>
`;
